[gd_scene load_steps=22 format=3 uid="uid://cmrp81ukhcx6n"]

[ext_resource type="Texture2D" uid="uid://conu5ye0k6asp" path="res://main/home/square.png" id="1_js8mp"]
[ext_resource type="Script" path="res://main/mini_game/praying_mantis/praying_mantis.gd" id="1_wcc06"]
[ext_resource type="Texture2D" uid="uid://b3w6ig6fwsjjo" path="res://main/home/duck/godot.png" id="3_1sg0y"]
[ext_resource type="PackedScene" uid="uid://dcv54dujjcsen" path="res://main/mini_game/praying_mantis/block/Block.tscn" id="3_tc8st"]
[ext_resource type="Texture2D" uid="uid://c1i6p3qgvgqcg" path="res://main/mini_game/satanic_panic/background.png" id="3_xlme4"]
[ext_resource type="Script" path="res://main/mini_game/praying_mantis/vignette_screen_shake_camera.gd" id="5_cusqf"]
[ext_resource type="Shader" path="res://main/mini_game/praying_mantis/vignette.gdshader" id="6_cq8u6"]
[ext_resource type="AudioStream" uid="uid://t44x686wys0q" path="res://main/mini_game/praying_mantis/block/rock_fall.mp3" id="7_nkiou"]
[ext_resource type="AudioStream" uid="uid://du5d0fqocf82h" path="res://main/mini_game/praying_mantis/praying_mantis.mp3" id="8_5l7e6"]
[ext_resource type="AudioStream" uid="uid://djew118bq3u6d" path="res://main/mini_game/praying_mantis/miss.wav" id="8_hg4ks"]
[ext_resource type="AudioStream" uid="uid://b6rsdofyiwh0p" path="res://main/mini_game/praying_mantis/block/clock.wav" id="9_ma4gj"]
[ext_resource type="PackedScene" uid="uid://grwwjq4jrar8" path="res://main/ui/mini_game/praying_mantis/PrayingMantisUI.tscn" id="10_3tyte"]

[sub_resource type="Animation" id="Animation_iuym4"]
resource_name = "scroll"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(608, 515), Vector2(408, 515)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tmfgu"]
_data = {
"scroll": SubResource("Animation_iuym4")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uvgrh"]
size = Vector2(128, 64)

[sub_resource type="Animation" id="Animation_1pbk3"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(101, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(374, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_hk40b"]
resource_name = "hit"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(101, -0.25, 0, 0.25, 0, 80, -0.25, 0, 0.1, 21, 160, -0.2, -31, 0.25, 0, 101, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.3, 1)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_odnak"]
resource_name = "mistake"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(374, -0.25, 0, 0.25, 0, 310, -0.25, 0, 0.25, 0, 374, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iqxsi"]
_data = {
"RESET": SubResource("Animation_1pbk3"),
"hit": SubResource("Animation_hk40b"),
"mistake": SubResource("Animation_odnak")
}

[sub_resource type="Gradient" id="Gradient_hflw4"]
offsets = PackedFloat32Array(0, 0.993939)
colors = PackedColorArray(1, 1, 1, 0.403922, 1, 1, 1, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_17734"]
shader = ExtResource("6_cq8u6")
shader_parameter/vignette_intensity = 0.715
shader_parameter/vignette_opacity = 0.0
shader_parameter/vignette_rgb = null

[node name="PrayingMantis" type="Node" node_paths=PackedStringArray("UI")]
script = ExtResource("1_wcc06")
block_scene = ExtResource("3_tc8st")
UI = NodePath("UI")

[node name="Background" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(608, 515)
texture = ExtResource("3_xlme4")
region_enabled = true
region_rect = Rect2(-2000, -2000, 4000, 4000)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background"]
autoplay = "scroll"
libraries = {
"": SubResource("AnimationLibrary_tmfgu")
}

[node name="Bottom" type="StaticBody2D" parent="."]
position = Vector2(608, 515)
scale = Vector2(64, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
shape = SubResource("RectangleShape2D_uvgrh")

[node name="Sprite2D" type="Sprite2D" parent="Bottom"]
self_modulate = Color(0.0901961, 0.0823529, 0.168627, 1)
texture = ExtResource("1_js8mp")

[node name="Top" type="StaticBody2D" parent="."]
position = Vector2(608, 41)
scale = Vector2(64, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2(0.03125, -8.5)
shape = SubResource("RectangleShape2D_uvgrh")

[node name="Sprite2D" type="Sprite2D" parent="Top"]
self_modulate = Color(0.0901961, 0.0823529, 0.168627, 1)
position = Vector2(0.34375, -8.5)
texture = ExtResource("1_js8mp")

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(101, 374)
scale = Vector2(0.02, 0.02)
texture = ExtResource("3_1sg0y")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
playback_speed = 8.0
libraries = {
"": SubResource("AnimationLibrary_iqxsi")
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="Player"]
emitting = false
amount = 16
lifetime = 0.1
texture = ExtResource("3_1sg0y")
gravity = Vector2(0, 0)
scale_amount_min = 0.02
scale_amount_max = 0.02
color_ramp = SubResource("Gradient_hflw4")

[node name="StartMarker" type="Marker2D" parent="."]
position = Vector2(291, 308)

[node name="ScreenShakeCamera" type="Camera2D" parent="." node_paths=PackedStringArray("vignette", "sound")]
anchor_mode = 0
current = true
script = ExtResource("5_cusqf")
vignette = NodePath("../CanvasLayer/Vignette")
sound = NodePath("../RockFall")

[node name="RockFall" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_nkiou")
volume_db = -80.0
autoplay = true

[node name="Miss" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_hg4ks")
volume_db = 5.0

[node name="Clock" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ma4gj")
volume_db = 5.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_5l7e6")
volume_db = -8.0
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Vignette" type="TextureRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_17734")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
texture = ExtResource("1_js8mp")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="TotalTimer" type="Timer" parent="."]
one_shot = true

[node name="UI" parent="." instance=ExtResource("10_3tyte")]
